fix checkstyle: imports and deprecated URL class