@@ -24,7 +24,8 @@
 package org.cactoos.io;
 
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import org.cactoos.bytes.BytesOf;
 import org.cactoos.func.Repeated;
 import org.cactoos.scalar.LengthOf;
@@ -62,15 +63,15 @@ final class StickyTest {
     }
 
     @Test
-    void readsRealUrl() throws MalformedURLException {
+    void readsRealUrl() throws MalformedURLException, URISyntaxException {
         new Assertion<>(
             "Must fetch text page from the URL",
             new TextOf(
                 new Sticky(
                     new InputOf(
-                        new URL(
+                        new URI(
                             "file:src/test/resources/org/cactoos/large-text.txt"
-                        )
+                        ).toURL()
                     )
                 )
             ),
